--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,16 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:id="@+id/atras"
+        android:layout_width="131dp"
+        android:layout_height="41dp"
+        android:text="Atras"
+        app:layout_constraintBottom_toTopOf="@+id/rv_listado_productos"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.695" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_listado_productos"
@@ -22,5 +25,17 @@
         android:layout_marginTop="64dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/crear_btn"
+        android:layout_width="234dp"
+        android:layout_height="39dp"
+        android:text="Crear producto"
+        app:layout_constraintBottom_toTopOf="@+id/rv_listado_productos"
+        app:layout_constraintEnd_toStartOf="@+id/atras"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
