--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/atras"
         android:layout_width="131dp"
         android:layout_height="41dp"
+        android:onClick="clickAtras"
         android:text="Atras"
         app:layout_constraintBottom_toTopOf="@+id/rv_listado_productos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +31,7 @@
         android:id="@+id/crear_btn"
         android:layout_width="234dp"
         android:layout_height="39dp"
+        android:onClick="clickAdd"
         android:text="Crear producto"
         app:layout_constraintBottom_toTopOf="@+id/rv_listado_productos"
         app:layout_constraintEnd_toStartOf="@+id/atras"
