--- a/app/src/main/res/layout/activity_inicarsesion.xml
+++ b/app/src/main/res/layout/activity_inicarsesion.xml
@@ -7,12 +7,13 @@
     tools:context=".Inicarsesion_activity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="409dp"
+        android:id="@+id/ConstraintLayout"
+        android:layout_width="411dp"
         android:layout_height="448dp"
         android:background="@drawable/shape_log_in_act"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:layout_constraintVertical_bias="1.0">
@@ -32,8 +33,8 @@
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="236dp"
+            android:layout_height="61dp"
             android:ems="10"
             android:hint="Correo Electronico"
             android:inputType="textEmailAddress"
@@ -46,8 +47,8 @@
 
         <EditText
             android:id="@+id/editTextTextPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="234dp"
+            android:layout_height="57dp"
             android:ems="10"
             android:hint="Contraseña"
             android:inputType="textPassword"
@@ -75,11 +76,13 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="412dp"
-        android:layout_height="269dp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        android:layout_width="406dp"
+        android:layout_height="267dp"
+        app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062"
         app:srcCompat="@drawable/logo_u_vig__1_" />
 </androidx.constraintlayout.widget.ConstraintLayout>
